--- a/css/Device_responsive/lg-Largedevices.css
+++ b/css/Device_responsive/lg-Largedevices.css
@@ -39,7 +39,8 @@
     }
 
     #shopNow .menCollection {
-        margin-top: -.6rem;
+        background-size: 89%;
+        margin-top: -0.5rem;
     }
 
     #shopNow .menCollection .menText {
@@ -59,5 +60,110 @@
         font-size: 0.7rem;
         text-align: center;
         display: block;
+    }
+
+    .dealDiv .dealtext h3 {
+        font-size: .8rem;
+    }
+
+    .dealDiv .dealContentWrapper .imgwrapper .hovereffect {
+        margin-top: -3.5rem;
+    }
+
+    .dealDiv .dealContentWrapper .imgwrapper img {
+        width: 73%;
+        margin-left: 12%;
+        max-width: 6rem;
+    }
+
+    .dealDiv .dealContentWrapper .dayCounter {
+        width: 100%;
+    }
+
+    .dealDiv .dealContentWrapper .dayCounter .day p {
+        font-size: 0.6rem;
+    }
+
+    .testImonialDiv .testmonialContentWrapper .imgTextWrapper {
+        margin-top: .5rem;
+    }
+
+    #shopNow .ourService .serviceWrapper ul .servicelist .serviceCntentWrapper .mainContentWrapper h6 {
+        font-size: 0.6rem;
+
+    }
+
+    #shopNow .ourService .serviceWrapper ul .servicelist .serviceCntentWrapper .mainContentWrapper p {
+        font-size: 0.5rem;
+        margin-top: -0.3rem;
+    }
+
+    #shopNow .bestSellers .bestsellwrapper .list .textPrice .stars i {
+        font-size: 0.5rem;
+        color: #feba29;
+    }
+
+    #shopNow .bestSellers .bestsellwrapper .list .textPrice .price p {
+        font-size: 0.5rem;
+    }
+
+    #shopNow .newsletter .newswrapper form input {
+        font-size: 0.7rem;
+    }
+
+    #shopNow .newsletter .newswrapper form button {
+        margin-left: 7%;
+
+    }
+
+    .latestproduct .latestwrapper .list .textPrice .stars i {
+        font-size: 0.5rem;
+    }
+
+    .latestproduct .latestwrapper .list .textPrice .price p {
+        font-size: 0.5rem;
+    }
+
+    #shopNow .exclusive .excwrapper h6 {
+        margin-top: 1rem;
+    }
+
+    #shopNow .exclusive .excwrapper h6::after {
+        top: 40px;
+        left: 23px;
+    }
+
+    #shopNow .menCollection {
+        background-size: 130%;
+    }
+
+    #shopNow .ourService .serviceWrapper ul .servicelist .serviceCntentWrapper .mainContentWrapper h6 {
+        font-size: 0.7rem !important;
+    }
+
+    #shopNow .bestSellers .bestsellwrapper .list .textPrice a h6 {
+        font-size: 0.6rem;
+    }
+
+    .latestproduct .latestwrapper .list .textPrice a h6 {
+        font-size: 0.6rem;
+    }
+
+    .shipWrapper .alltextWrapper .colText .shopwrapper {
+        margin: 0 auto;
+    }
+
+    .featuredDiv .row-wrapper .cardWrapper .cardtextWrapper button {
+        width: 8rem;
+        left: 1rem;
+    }
+
+    .ourBlog .blogCardWrapper .blogCard .blogTextWrapper .decriptionDiv p {
+        font-size: 0.8rem;
+    }
+
+    .ourBlog .blogCardWrapper .blogCard .blogTextWrapper .datediv::after {
+        left: 87px;
+        width: 20%;
     }
 }
